fix syntax letter spacing

--- a/css-structure_custom-properties/css/styles.css
+++ b/css-structure_custom-properties/css/styles.css
@@ -2,6 +2,7 @@
   --color-black-light: rgb(48 48 48);
   --color-primary: rgb(130, 54, 255);
   --color-white: rgb(255 255 255);
+  --letter-spacing-basic: 0.025em;
 }
 
 *,
@@ -25,13 +26,13 @@ h1 {
   color: white;
   line-height: 1.4;
   margin: 0;
-  letter-spacing: 0.025em;
+  letter-spacing: var(--letter-spacing-basic);
   text-transform: uppercase;
   padding-block: 16px;
 }
 
 h2 {
-  letter-spacing: 0.025em;
+  letter-spacing: var(--letter-spacing-basic);
 }
 
 strong {
@@ -96,7 +97,7 @@ mark {
   background-color: var(--color-primary);
   color: var(--color-white);
   border-radius: 4px;
-  letter-spacing: 0.025em;
+  letter-spacing: var(--letter-spacing-basic);
 }
 
 ::selection {
